--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "next": "12.0.3",
-    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-toast-notifications": "^2.5.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
