--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cookies-js": "^1.2.3",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
