--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
     "cookies-js": "^1.2.3",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
